# cli-of-doom

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
grep/src/: lib.rs
learn/: Cargo.toml
learn/src/learn/: functional.tests.rs  lifetimes.rs  mod.rs  slice.rs  structs.rs  testing.tests.rs  variables.rs
src/: lib.rs  main.rs
src/grep/: mod.rs
src/learn/: control.rs  data_types.rs  documentation.rs  enums.rs  errors.rs  functional.rs  generics.rs  guess.rs  lifetimes.rs  mod.rs  ownership.rs  strings.rs  testing.rs  testing.tests.rs  traits.rs
tests/: example_integration_tests.rs
xlsx/: convert.py
