[package]
name = "cli-of-doom"
version = "0.1.0"
authors = ["Lee Lian Hoy <cruz@zyk3.net>"]
edition = "2018"
default-run = "cli-of-doom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
colored = "*"
dotenv = "*"
rand = "*"
serde = "*"
serde_json = "*"
